--- a/app/src/main/res/layout-land/activity_fine.xml
+++ b/app/src/main/res/layout-land/activity_fine.xml
@@ -106,9 +106,10 @@
                 android:id="@+id/check_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/button_check"
+                android:background="@color/button"
                 android:text="@string/btn_check"
-                android:textColor="@drawable/text_button" />
+                android:textColor="@drawable/text_button"
+                android:shadowColor="@color/buttonShade" />
 
             <View
                 android:layout_width="0dp"
