--- a/app/src/main/res/layout-land/activity_auto_result.xml
+++ b/app/src/main/res/layout-land/activity_auto_result.xml
@@ -18,13 +18,6 @@ android:orientation="vertical">
     android:layout_below="@+id/toolbar"
     android:scrollIndicators="right">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:orientation="vertical">
-
-    </LinearLayout>
 </ScrollView>
 
 <LinearLayout
@@ -127,7 +120,7 @@ android:orientation="vertical">
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/button"
-    android:text="back"
+    android:text="@string/btn_back"
     android:textColor="@drawable/text_button"
     android:layout_above="@+id/NavigationLinearLayout"
     android:layout_alignParentLeft="true"
