--- a/app/src/main/res/layout-land/activity_driver_result.xml
+++ b/app/src/main/res/layout-land/activity_driver_result.xml
@@ -127,7 +127,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/button"
-        android:text="back"
+        android:text="@string/btn_back"
         android:textColor="@drawable/text_button"
         android:layout_above="@+id/NavigationLinearLayout"
         android:layout_alignParentLeft="true"
