--- a/app/src/main/res/layout/activity_driver.xml
+++ b/app/src/main/res/layout/activity_driver.xml
@@ -146,11 +146,12 @@
             android:id="@+id/check_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center"
-            android:background="@drawable/button_check"
+            android:background="@color/button"
             android:paddingTop="10dp"
             android:text="@string/btn_check"
-            android:textColor="@drawable/text_button" />
+            android:textColor="@drawable/text_button"
+            android:singleLine="false"
+            android:shadowColor="@color/buttonShade" />
 
         <View
             android:id="@+id/bottom_menu_border"
