--- a/app/src/main/res/layout/activity_question_next.xml
+++ b/app/src/main/res/layout/activity_question_next.xml
@@ -133,9 +133,10 @@
             android:id="@+id/CheckButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/button_check"
+            android:background="@color/button"
             android:text="@string/btn_send"
-            android:textColor="@drawable/text_button" />
+            android:textColor="@drawable/text_button"
+            android:shadowColor="@color/buttonShade" />
 
         <View
             android:id="@+id/bottom_menu_border"
