--- a/app/src/main/res/layout-land/activity_auto.xml
+++ b/app/src/main/res/layout-land/activity_auto.xml
@@ -88,11 +88,11 @@
             <Button
                 android:id="@+id/check_button"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/button"
+                android:layout_height="40dp"
+                android:background="@drawable/check_btn_shadow"
                 android:text="@string/btn_check"
                 android:textColor="@drawable/text_button"
-                android:shadowColor="@color/buttonShade" />
+                android:layout_weight="1" />
 
             <View
                 android:layout_width="0dp"
