--- a/app/src/main/res/layout-land/activity_auto_result.xml
+++ b/app/src/main/res/layout-land/activity_auto_result.xml
@@ -118,12 +118,11 @@ android:orientation="vertical">
 <Button
     android:id="@+id/check_button_back"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/button"
+    android:layout_height="40dp"
+    android:background="@drawable/check_btn_shadow"
     android:text="@string/btn_back"
     android:textColor="@drawable/text_button"
     android:layout_above="@+id/NavigationLinearLayout"
     android:layout_alignParentLeft="true"
-    android:layout_alignParentStart="true"
-    android:shadowColor="@color/buttonShade"/>
+    android:layout_alignParentStart="true" />
 </RelativeLayout>
