--- a/app/src/main/res/layout-land/activity_driver.xml
+++ b/app/src/main/res/layout-land/activity_driver.xml
@@ -135,13 +135,12 @@
             <Button
                 android:id="@+id/check_button"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:layout_gravity="bottom|center"
-                android:background="@color/button"
+                android:background="@drawable/check_btn_shadow"
                 android:paddingTop="10dp"
                 android:text="@string/btn_check"
-                android:textColor="@drawable/text_button"
-                android:shadowColor="@color/buttonShade" />
+                android:textColor="@drawable/text_button" />
 
         </LinearLayout>
     </ScrollView>
