--- a/app/src/main/res/layout-land/activity_question.xml
+++ b/app/src/main/res/layout-land/activity_question.xml
@@ -116,11 +116,10 @@
             <Button
                 android:id="@+id/btn_next"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/button"
+                android:layout_height="40dp"
+                android:background="@drawable/check_btn_shadow"
                 android:text="@string/btn_next"
-                android:textColor="@drawable/text_button"
-                android:shadowColor="@color/buttonShade" />
+                android:textColor="@drawable/text_button" />
 
             <View
                 android:layout_width="0dp"
