--- a/app/src/main/res/layout/activity_auto_result.xml
+++ b/app/src/main/res/layout/activity_auto_result.xml
@@ -12,11 +12,10 @@ android:orientation="vertical">
     android:id="@+id/scrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_above="@+id/NavigationLinearLayout"
+    android:scrollIndicators="right"
+    android:layout_centerVertical="true"
     android:layout_alignParentLeft="true"
-    android:layout_alignParentStart="true"
-    android:layout_below="@+id/toolbar"
-    android:scrollIndicators="right">
+    android:layout_alignParentStart="true">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -125,12 +124,11 @@ android:orientation="vertical">
 <Button
     android:id="@+id/check_button_back"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/button"
+    android:layout_height="40dp"
+    android:background="@drawable/check_btn_shadow"
     android:text="back"
     android:textColor="@drawable/text_button"
-    android:layout_above="@+id/NavigationLinearLayout"
-    android:layout_alignParentLeft="true"
-    android:layout_alignParentStart="true"
-    android:shadowColor="@color/buttonShade"/>
+    android:layout_alignParentLeft="false"
+    android:layout_alignParentStart="false"
+    android:layout_above="@+id/NavigationLinearLayout" />
 </RelativeLayout>
