--- a/app/src/main/res/layout/activity_driver.xml
+++ b/app/src/main/res/layout/activity_driver.xml
@@ -145,13 +145,12 @@
         <Button
             android:id="@+id/check_button"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/button"
+            android:layout_height="40dp"
+            android:background="@drawable/check_btn_shadow"
             android:paddingTop="10dp"
             android:text="@string/btn_check"
             android:textColor="@drawable/text_button"
-            android:singleLine="false"
-            android:shadowColor="@color/buttonShade" />
+            android:singleLine="false" />
 
         <View
             android:id="@+id/bottom_menu_border"
