--- a/app/src/main/res/layout/activity_question_next.xml
+++ b/app/src/main/res/layout/activity_question_next.xml
@@ -132,11 +132,10 @@
         <Button
             android:id="@+id/CheckButton"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/button"
+            android:layout_height="40dp"
+            android:background="@drawable/check_btn_shadow"
             android:text="@string/btn_send"
-            android:textColor="@drawable/text_button"
-            android:shadowColor="@color/buttonShade" />
+            android:textColor="@drawable/text_button" />
 
         <View
             android:id="@+id/bottom_menu_border"
