--- a/app/src/main/res/layout/activity_driver_result.xml
+++ b/app/src/main/res/layout/activity_driver_result.xml
@@ -5,8 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/toolbar"
-        android:id="@+id/include" />
+    <include layout="@layout/toolbar" />
 
     <ScrollView
         android:id="@+id/scrollView"
