--- a/app/src/main/res/layout/activity_auto.xml
+++ b/app/src/main/res/layout/activity_auto.xml
@@ -97,11 +97,10 @@
         <Button
             android:id="@+id/check_button"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:background="@drawable/check_btn_shadow"
             android:text="@string/btn_check"
-            android:textColor="@drawable/text_button"
-            android:layout_weight="1" />
+            android:textColor="@drawable/text_button" />
 
         <View
             android:id="@+id/bottom_menu_border"
