--- a/app/src/main/res/layout/activity_driver.xml
+++ b/app/src/main/res/layout/activity_driver.xml
@@ -147,10 +147,8 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@drawable/check_btn_shadow"
-            android:paddingTop="10dp"
             android:text="@string/btn_check"
-            android:textColor="@drawable/text_button"
-            android:singleLine="false" />
+            android:textColor="@drawable/text_button" />
 
         <View
             android:id="@+id/bottom_menu_border"
