--- a/app/src/main/res/layout-land/activity_auto.xml
+++ b/app/src/main/res/layout-land/activity_auto.xml
@@ -47,17 +47,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:inputType="number|text"
                 android:maxLength="17" />
 
-            <CheckBox
+            <!--<CheckBox
                 android:id="@+id/vin_check_box"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="VIN номер отсутствует"
                 android:textColor="#777777"
-                android:textSize="17dp" />
+                android:textSize="17dp" />-->
 
             <TextView
                 android:id="@+id/captcha_text_view"
@@ -101,7 +100,7 @@
         </LinearLayout>
     </ScrollView>
 
-    <LinearLayout
+    <!--<LinearLayout
         android:id="@+id/NavigationLinearLayout"
         android:layout_width="match_parent"
         android:layout_height="75dp"
@@ -117,21 +116,22 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="74dp"
+            android:id="@+id/menu"
             android:orientation="horizontal">
 
-            <View
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:layout_weight="1"></View>
+            &lt;!&ndash;<View&ndash;&gt;
+                &lt;!&ndash;android:layout_width="0dp"&ndash;&gt;
+                &lt;!&ndash;android:layout_height="1dp"&ndash;&gt;
+                &lt;!&ndash;android:layout_weight="1"></View>&ndash;&gt;
 
-            <ImageButton
-                android:id="@+id/menu_fine_btn"
-                android:layout_width="60dp"
-                android:layout_height="match_parent"
-                android:adjustViewBounds="true"
-                android:background="@android:color/transparent"
-                android:scaleType="centerInside"
-                android:src="@drawable/menu_fine_off" />
+            &lt;!&ndash;<ImageButton&ndash;&gt;
+                &lt;!&ndash;android:id="@+id/menu_fine_btn"&ndash;&gt;
+                &lt;!&ndash;android:layout_width="60dp"&ndash;&gt;
+                &lt;!&ndash;android:layout_height="match_parent"&ndash;&gt;
+                &lt;!&ndash;android:adjustViewBounds="true"&ndash;&gt;
+                &lt;!&ndash;android:background="@android:color/transparent"&ndash;&gt;
+                &lt;!&ndash;android:scaleType="centerInside"&ndash;&gt;
+                &lt;!&ndash;android:src="@drawable/menu_fine_off" />&ndash;&gt;
 
             <View
                 android:layout_width="0dp"
@@ -166,20 +166,20 @@
                 android:layout_height="1dp"
                 android:layout_weight="1"></View>
 
-            <ImageButton
-                android:id="@+id/menu_question_btn"
-                android:layout_width="60dp"
-                android:layout_height="match_parent"
-                android:adjustViewBounds="true"
-                android:background="@android:color/transparent"
-                android:scaleType="centerInside"
-                android:src="@drawable/menu_question_off" />
+            &lt;!&ndash;<ImageButton&ndash;&gt;
+                &lt;!&ndash;android:id="@+id/menu_question_btn"&ndash;&gt;
+                &lt;!&ndash;android:layout_width="60dp"&ndash;&gt;
+                &lt;!&ndash;android:layout_height="match_parent"&ndash;&gt;
+                &lt;!&ndash;android:adjustViewBounds="true"&ndash;&gt;
+                &lt;!&ndash;android:background="@android:color/transparent"&ndash;&gt;
+                &lt;!&ndash;android:scaleType="centerInside"&ndash;&gt;
+                &lt;!&ndash;android:src="@drawable/menu_question_off" />&ndash;&gt;
 
-            <View
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:layout_weight="1"></View>
+            &lt;!&ndash;<View&ndash;&gt;
+                &lt;!&ndash;android:layout_width="0dp"&ndash;&gt;
+                &lt;!&ndash;android:layout_height="1dp"&ndash;&gt;
+                &lt;!&ndash;android:layout_weight="1"></View>&ndash;&gt;
 
         </LinearLayout>
-    </LinearLayout>
+    </LinearLayout>-->
 </RelativeLayout>
