--- a/app/src/main/res/layout/activity_auto_result.xml
+++ b/app/src/main/res/layout/activity_auto_result.xml
@@ -11,21 +11,19 @@ android:orientation="vertical">
     android:id="@+id/scrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:scrollIndicators="right"
     android:layout_centerVertical="true"
     android:layout_alignParentLeft="true"
     android:layout_alignParentStart="true">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:orientation="vertical">
 
-    </LinearLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text" />
+
 </ScrollView>
 
-<LinearLayout
+<!--<LinearLayout
     android:id="@+id/NavigationLinearLayout"
     android:layout_width="match_parent"
     android:layout_height="75dp"
@@ -43,19 +41,19 @@ android:orientation="vertical">
         android:layout_height="74dp"
         android:orientation="horizontal">
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            android:layout_weight="1"></View>
+        &lt;!&ndash;<View&ndash;&gt;
+            &lt;!&ndash;android:layout_width="0dp"&ndash;&gt;
+            &lt;!&ndash;android:layout_height="1dp"&ndash;&gt;
+            &lt;!&ndash;android:layout_weight="1"></View>&ndash;&gt;
 
-        <ImageButton
-            android:id="@+id/menu_fine_btn"
-            android:layout_width="60dp"
-            android:layout_height="match_parent"
-            android:adjustViewBounds="true"
-            android:background="@android:color/transparent"
-            android:scaleType="centerInside"
-            android:src="@drawable/menu_fine_off" />
+        &lt;!&ndash;<ImageButton&ndash;&gt;
+            &lt;!&ndash;android:id="@+id/menu_fine_btn"&ndash;&gt;
+            &lt;!&ndash;android:layout_width="60dp"&ndash;&gt;
+            &lt;!&ndash;android:layout_height="match_parent"&ndash;&gt;
+            &lt;!&ndash;android:adjustViewBounds="true"&ndash;&gt;
+            &lt;!&ndash;android:background="@android:color/transparent"&ndash;&gt;
+            &lt;!&ndash;android:scaleType="centerInside"&ndash;&gt;
+            &lt;!&ndash;android:src="@drawable/menu_fine_off" />&ndash;&gt;
 
         <View
             android:layout_width="0dp"
@@ -91,43 +89,28 @@ android:orientation="vertical">
             android:layout_height="1dp"
             android:layout_weight="1"></View>
 
-        <ImageButton
-            android:id="@+id/menu_question_btn"
-            android:layout_width="60dp"
-            android:layout_height="match_parent"
-            android:adjustViewBounds="true"
-            android:background="@android:color/transparent"
-            android:scaleType="centerInside"
-            android:src="@drawable/menu_question_off" />
+        &lt;!&ndash;<ImageButton&ndash;&gt;
+            &lt;!&ndash;android:id="@+id/menu_question_btn"&ndash;&gt;
+            &lt;!&ndash;android:layout_width="60dp"&ndash;&gt;
+            &lt;!&ndash;android:layout_height="match_parent"&ndash;&gt;
+            &lt;!&ndash;android:adjustViewBounds="true"&ndash;&gt;
+            &lt;!&ndash;android:background="@android:color/transparent"&ndash;&gt;
+            &lt;!&ndash;android:scaleType="centerInside"&ndash;&gt;
+            &lt;!&ndash;android:src="@drawable/menu_question_off" />&ndash;&gt;
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            android:layout_weight="1"></View>
+        &lt;!&ndash;<View&ndash;&gt;
+            &lt;!&ndash;android:layout_width="0dp"&ndash;&gt;
+            &lt;!&ndash;android:layout_height="1dp"&ndash;&gt;
+            &lt;!&ndash;android:layout_weight="1"></View>&ndash;&gt;
 
     </LinearLayout>
-</LinearLayout>
+</LinearLayout>-->
 
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="New Text"
-    android:id="@+id/result_text_view"
-    android:layout_below="@+id/include"
-    android:layout_alignParentLeft="true"
-    android:layout_alignParentStart="true"
-    android:layout_alignParentRight="true"
-    android:layout_alignParentEnd="true"
-    android:layout_above="@+id/check_button" />
-
-<Button
+<!--<Button
     android:id="@+id/check_button_back"
     android:layout_width="match_parent"
     android:layout_height="40dp"
     android:background="@drawable/check_btn_shadow"
-    android:text="back"
     android:textColor="@drawable/text_button"
-    android:layout_alignParentLeft="false"
-    android:layout_alignParentStart="false"
-    android:layout_above="@+id/NavigationLinearLayout" />
+    android:layout_below="@+id/scrollView" />-->
 </RelativeLayout>
