--- a/app/src/main/res/layout/activity_driver.xml
+++ b/app/src/main/res/layout/activity_driver.xml
@@ -42,17 +42,17 @@
                 android:maxLength="4"
                 android:maxLines="1" />
 
-            <Button
-                android:id="@+id/recognize_series_camera"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:text="С камеры" />
+            <!--<Button-->
+                <!--android:id="@+id/recognize_series_camera"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_gravity="right"-->
+                <!--android:text="С камеры" />-->
 
-            <ImageView
+            <!--<ImageView
                 android:id="@+id/result_camera"
                 android:layout_width="50dp"
-                android:layout_height="50dp" />
+                android:layout_height="50dp" />-->
 
             <TextView
                 android:id="@+id/number_license_text_view"
@@ -71,12 +71,12 @@
                 android:maxLength="6"
                 android:maxLines="1" />
 
-            <Button
+            <!--<Button
                 android:id="@+id/recognize_number_camera"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
-                android:text="С камеры" />
+                android:text="С камеры" />-->
 
             <TextView
                 android:id="@+id/DateOfIssueTextView"
@@ -99,6 +99,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:gravity="center"
+                    android:inputType="date"
                     android:maxLength="10"
                     android:maxLines="1"></EditText>
 
@@ -135,7 +136,7 @@
 
     </ScrollView>
 
-    <LinearLayout
+    <!--<LinearLayout
         android:id="@+id/NavigationLinearLayout"
         android:layout_width="match_parent"
         android:layout_height="125dp"
@@ -156,24 +157,25 @@
             android:layout_height="1dp"
             android:background="@color/bottom_menu_border" />
 
-        <LinearLayout
+        &lt;!&ndash;<LinearLayout
             android:layout_width="match_parent"
             android:layout_height="74dp"
+            android:id="@+id/menu"
             android:orientation="horizontal">
 
-            <View
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:layout_weight="1"></View>
+            &lt;!&ndash;<View&ndash;&gt;
+                &lt;!&ndash;android:layout_width="0dp"&ndash;&gt;
+                &lt;!&ndash;android:layout_height="1dp"&ndash;&gt;
+                &lt;!&ndash;android:layout_weight="1"></View>&ndash;&gt;
 
-            <ImageButton
-                android:id="@+id/menu_fine_btn"
-                android:layout_width="60dp"
-                android:layout_height="match_parent"
-                android:adjustViewBounds="true"
-                android:background="@android:color/transparent"
-                android:scaleType="centerInside"
-                android:src="@drawable/menu_fine_off" />
+            &lt;!&ndash;<ImageButton&ndash;&gt;
+                &lt;!&ndash;android:id="@+id/menu_fine_btn"&ndash;&gt;
+                &lt;!&ndash;android:layout_width="60dp"&ndash;&gt;
+                &lt;!&ndash;android:layout_height="match_parent"&ndash;&gt;
+                &lt;!&ndash;android:adjustViewBounds="true"&ndash;&gt;
+                &lt;!&ndash;android:background="@android:color/transparent"&ndash;&gt;
+                &lt;!&ndash;android:scaleType="centerInside"&ndash;&gt;
+                &lt;!&ndash;android:src="@drawable/menu_fine_off" />&ndash;&gt;
 
             <View
                 android:layout_width="0dp"
@@ -208,20 +210,20 @@
                 android:layout_height="1dp"
                 android:layout_weight="1"></View>
 
-            <ImageButton
-                android:id="@+id/menu_question_btn"
-                android:layout_width="60dp"
-                android:layout_height="match_parent"
-                android:adjustViewBounds="true"
-                android:background="@android:color/transparent"
-                android:scaleType="centerInside"
-                android:src="@drawable/menu_question_off" />
+            &lt;!&ndash;<ImageButton&ndash;&gt;
+                &lt;!&ndash;android:id="@+id/menu_question_btn"&ndash;&gt;
+                &lt;!&ndash;android:layout_width="60dp"&ndash;&gt;
+                &lt;!&ndash;android:layout_height="match_parent"&ndash;&gt;
+                &lt;!&ndash;android:adjustViewBounds="true"&ndash;&gt;
+                &lt;!&ndash;android:background="@android:color/transparent"&ndash;&gt;
+                &lt;!&ndash;android:scaleType="centerInside"&ndash;&gt;
+                &lt;!&ndash;android:src="@drawable/menu_question_off" />&ndash;&gt;
 
-            <View
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:layout_weight="1"></View>
+            &lt;!&ndash;<View&ndash;&gt;
+                &lt;!&ndash;android:layout_width="0dp"&ndash;&gt;
+                &lt;!&ndash;android:layout_height="1dp"&ndash;&gt;
+                &lt;!&ndash;android:layout_weight="1"></View>&ndash;&gt;
 
-        </LinearLayout>
-    </LinearLayout>
+        </LinearLayout>&ndash;&gt;
+    </LinearLayout>-->
 </RelativeLayout>
