--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,37 +22,36 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
+            android:gravity="center"
             android:layout_weight="1"
             android:layout_gravity="center">
 
             <Button
-                android:id="@+id/menu_fine_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/menu_driver_btn"
+                android:layout_width="250px"
+                android:layout_height="250px"
                 android:textSize="13sp"
-                android:background="@drawable/fine"
-                android:layout_weight="1"
+                android:background="@drawable/driver"
                 android:layout_marginTop="50dp"
                 android:layout_marginBottom="50dp"
                 android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginRight="25dp"
                 android:layout_gravity="center" />
 
             <Button
-                android:id="@+id/menu_driver_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/menu_car_btn"
+                android:layout_width="250px"
+                android:layout_height="250px"
                 android:textSize="13sp"
-                android:background="@drawable/driver"
-                android:layout_weight="1"
+                android:background="@drawable/car"
                 android:layout_marginTop="50dp"
                 android:layout_marginBottom="50dp"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="25dp"
                 android:layout_marginRight="10dp"
                 android:layout_gravity="center" />
         </LinearLayout>
 
-        <LinearLayout
+        <!--<LinearLayout
             android:id="@+id/secondLineLinearLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -61,13 +60,13 @@
             android:layout_gravity="center"
             android:gravity="center">
 
+
             <Button
-                android:id="@+id/menu_car_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/menu_fine_btn"
+                android:layout_width="100px"
+                android:layout_height="100px"
                 android:textSize="13sp"
-                android:background="@drawable/car"
-                android:layout_weight="1"
+                android:background="@drawable/fine"
                 android:layout_marginTop="50dp"
                 android:layout_marginBottom="50dp"
                 android:layout_marginLeft="10dp"
@@ -87,6 +86,6 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_gravity="center" />
-        </LinearLayout>
+        </LinearLayout>-->
     </LinearLayout>
 </LinearLayout>
